<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ProgressBar android:id="@+id/progressView" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone"
        android:layout_centerInParent="true" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/follow_cabecera1"
                android:background="@color/colorAccent"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/textEmpty"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/follow_empty"
                android:layout_marginBottom="10dp"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/follow_cabecera2"
                android:background="@color/colorAccent"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_marginVertical="10dp" />

            <TextView
                android:id="@+id/textEmpty2"
                android:layout_width="match_parent"
                android:textStyle="italic"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/follow_empty"
                android:layout_marginBottom="10dp"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/follow_cabecera3"
                android:background="@color/colorAccent"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_marginVertical="10dp" />

            <TextView
                android:id="@+id/textEmpty3"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/follow_empty"
                android:layout_marginBottom="10dp"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>